@@ -192,6 +192,8 @@ secure_log_date_format = %b %e
 		volt7	= Battery
 		gpu0	= nvidia
 	</list>
+	<desc>
+	</desc>
 </lmsens>
 
 
